<resources>
    <string name="app_name">Fers Investiment</string>
    <string name="Label_user">Usuario o documento</string>
    <string name="Label_pasw">Contraseña</string>
    <string name="Label_btnIngresar">Ingresar</string>
    <string name="Label_investiments">Inversiones</string>
    <string name="Label_name_t">Nombre</string>
    <string name="Label_fond_cap_t">Capital en fondo</string>
    <string name="L_fond_cap_iv">Capital invertido</string>
    <string name="L_age_t">Edad</string>
    <string name="fond_main">Fondo de inversiones</string>
    <string name="client_details">Detalles</string>
    <string name="clients">Clientes</string>
    <string name="addInvestimer">Agregar inversionista</string>
    <string name="add_Clients">Agregar clientes</string>
    <string name="showClients">Ver clientes</string>
    <string name="addInvest">Agregar inversión</string>
    <string name="showInvest">Ver inversiones</string>
    <string name="Registry">Registrar</string>
    <string name="id_Card">Número de documento</string>
    <string name="E_mail">Correo electrónico</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="c_age">Edad</string>
    <string name="add">Agregar</string>
    <string name="nIvest">Nombre de inversión</string>
    <string name="logIn">Log In</string>
    <string name="min_invest">Valor mínimo de inversión</string>
    <string name="descInvest">Descripción de inversión</string>
    <string name="tInvest">Total de inversión</string>
    <string name="minInvest">Minimo de inversión</string>
    <string name="depcription">Descripción</string>
    <string name="investimers">Inversionistas</string>
    <string name="investWithD">Retirar de inverión</string>
    <string name="totalVal">Valor disponible</string>
    <string name="addInvMoney">Depositar en inversión</string>
    <string name="addFondMoneyY">Depositar a fondo</string>
    <string name="RetFond">Retirar de fondo</string>
    <string name="Withdrawal">Retirar</string>
    <string name="Hmovs">Historial de movimientos</string>
    <string name="MinValToInvest">Valor minímo inversión</string>
    <string name="update">Actualizar</string>
    <string name="editName">Editar nombre</string>
    <string name="name">Nombre</string>
    <string name="Invested">Invertido</string>
    <string name="Contribution">Aporte</string>
    <string name="tInvested">T.Inversión</string>
    <string name="Edit">Editar</string>
    <string name="delete">Delete</string>
    <string name="investttName">Nombre inversión</string>
    <string name="Invest_detail">Detalle de inversión</string>
    <string name="cclient_detail">Detalle cliente</string>
    <string name="EditName">Editar nombre</string>
    <string name="invertir">Invertir</string>
    <string name="nInvestVal">Valor a invertir</string>
    <string name="save">Guardar</string>
    <string name="ipAddres">Dirección IP del servidor</string>
    <string name="serConfig">Configuración de servidor</string>
</resources>