<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".add_invest" android:gravity="center" android:paddingHorizontal="60dp"
        android:background="@color/white">

    <TextView
            android:text="@string/Registry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView12" android:textSize="28sp"
            android:fontFamily="@font/roboto" android:textColor="#000000" android:textStyle="bold"
            android:gravity="center" android:layout_marginBottom="10dp"/>
    <TextView
            android:text="@string/E_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView16" android:textSize="20sp"
            android:textStyle="bold" android:fontFamily="@font/roboto" android:textColor="#000000"
            android:paddingHorizontal="10dp" android:layout_marginBottom="10dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/e_mailI"
            android:background="@drawable/borderredius" android:minHeight="48dp" android:hint="E-mail asociado"
            android:textColorHint="@color/Hint"/>
    <TextView
            android:text="@string/investttName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView15" android:textSize="20sp"
            android:textStyle="bold" android:fontFamily="@font/roboto" android:textColor="#000000"
            android:paddingHorizontal="10dp" android:layout_marginBottom="10dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNInvest" android:background="@drawable/borderredius"
            android:minHeight="48dp" android:hint="Nombre de la invesión" android:textColorHint="@color/Hint"/>
    <TextView
            android:text="@string/Label_pasw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView13" android:textSize="20sp"
            android:textStyle="bold" android:fontFamily="@font/roboto" android:textColor="#000000"
            android:paddingHorizontal="10dp" android:layout_marginBottom="10dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPasswI" android:background="@drawable/borderredius"
            android:hint="Digite una nueva contraseña" android:minHeight="48dp" android:textColorHint="@color/Hint"/>
    <TextView
            android:text="@string/min_invest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView17" android:textSize="20sp"
            android:textStyle="bold" android:fontFamily="@font/roboto" android:textColor="#000000"
            android:paddingHorizontal="10dp" android:layout_marginBottom="10dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etminVal" android:background="@drawable/borderredius" android:minHeight="48dp"
            android:hint="Min inversión" android:textColorHint="@color/Hint"/>
    <TextView
            android:text="@string/descInvest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView18" android:textSize="20sp"
            android:textStyle="bold" android:fontFamily="@font/roboto" android:textColor="#000000"
            android:paddingHorizontal="10dp" android:layout_marginBottom="10dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/etDecsp" android:background="@drawable/borderredius"
            android:minHeight="60dp" tools:ignore="SpeakableTextPresentCheck" android:layout_marginBottom="15dp"
            android:hint="Descripción de inversión" android:textColorHint="@color/Hint"/>
    <Button
            android:text="@string/add"
            android:layout_width="187dp"
            android:layout_height="66dp" android:id="@+id/btnAddInvest" android:textAllCaps="false"
            android:textSize="18sp" android:textStyle="bold" android:backgroundTint="@color/Green"/>
</LinearLayout>