<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        tools:context=".FondMain"
        android:id="@+id/ho">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="263dp"
            android:layout_marginBottom="40dp"
            android:paddingTop="30dp">
        <TextView
                android:text="@string/Label_fond_cap_t"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TextFond"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:gravity="center"/>
        <TextView
                android:text="$137.000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/total_found"
                android:fontFamily="@font/roboto"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:textColor="#000000"/>
        <TextView
                android:text="@string/clients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_clients"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:gravity="center"/>
        <TextView
                android:text="125"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/num_clients"
                android:fontFamily="@font/roboto"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:textColor="#000000"/>
        <TextView
                android:text="@string/Label_investiments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_invest"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:gravity="center"/>
        <TextView
                android:text="18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/num_invest"
                android:fontFamily="@font/roboto"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:textColor="#000000"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:paddingHorizontal="0dp" android:gravity="center">
        <Button
                android:text="@string/add_Clients"
                android:layout_width="230dp"
                android:layout_height="65dp"
                android:id="@+id/addClients"
                android:textAllCaps="false" android:textSize="17sp" android:textStyle="bold"/>
        <Button
                android:text="@string/showClients"
                android:layout_width="230dp"
                android:layout_height="65dp"
                android:id="@+id/showClients"
                android:textAllCaps="false" android:textSize="17sp" android:textStyle="bold"/>
        <Button
                android:text="@string/addInvest"
                android:layout_width="230dp"
                android:layout_height="65dp"
                android:id="@+id/addInvest"
                android:textAllCaps="false" android:textSize="17sp" android:textStyle="bold"/>
        <Button
                android:text="@string/showInvest"
                android:layout_width="230dp"
                android:layout_height="65dp"
                android:id="@+id/showInvest"
                android:textAllCaps="false" android:textSize="17sp" android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>