<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".Detail_Invest"
        android:background="@color/white">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="307dp"
            android:gravity="center"
            android:background="@drawable/borderredius"
            android:layout_marginBottom="10dp">
        <TextView
                android:text="@string/Label_name_t"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView25"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/roboto"
                android:textColor="#808080"
                android:textStyle="bold"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/iDName"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/roboto"
                android:textColor="#000000"
                android:paddingStart="0dp"
                android:textStyle="normal"
                android:paddingEnd="0dp"/>
        <TextView
                android:text="@string/tInvest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView27" android:gravity="center"
                android:textSize="18sp" android:fontFamily="@font/roboto" android:textColor="#808080"
                android:textStyle="bold"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idTinvest"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/roboto"
                android:textColor="#000000"
                android:textStyle="normal"/>
        <TextView
                android:text="@string/minInvest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView29"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/roboto"
                android:textColor="#808080"
                android:textStyle="bold"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idminValue"
                android:textSize="18sp"
                android:fontFamily="@font/roboto"
                android:textColor="#000000"
                android:paddingStart="0dp"
                android:gravity="center"
                android:textStyle="normal"
                android:paddingEnd="0dp"/>
        <TextView
                android:text="@string/clients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView31"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/roboto"
                android:textColor="#808080"
                android:textStyle="bold"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/iDnCs"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/roboto"
                android:textColor="#000000"
                android:textStyle="normal"/>
        <TextView
                android:text="@string/depcription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView33"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/roboto"
                android:textColor="#808080"
                android:textStyle="bold"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/iDDescp"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/roboto"
                android:textColor="#000000"
                android:textStyle="normal"/>
    </LinearLayout>
    <TextView
            android:text="@string/investimers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView35" android:layout_marginBottom="10dp"
            android:textSize="20sp" android:textStyle="bold" android:gravity="center"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/ListClients"/>
</LinearLayout>