<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   android:id="@+id/invest"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:animateLayoutChanges="true"
                                   app:cardCornerRadius="5dp"
                                   app:cardElevation="3dp"
                                   app:cardUseCompatPadding="true" app:cardBackgroundColor="#D9D9D9"
                                   android:background="@drawable/borderredius">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="horizontal"
            android:padding="10dp" android:backgroundTint="@color/cardBack">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="140dp"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/TextMov"
                    android:textSize="18dp"/>
            <TextView
                    android:text="William Fernando Roa Vargas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:textSize="16sp"
                    android:textColor="#000000"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="102dp"
                android:layout_height="match_parent" android:paddingStart="10dp" android:paddingEnd="0dp">
            <TextView
                    android:text="@string/tInvested"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tClientInvest"
                    android:textSize="18sp"/>
            <TextView
                    android:text="$2400"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/value"
                    android:textSize="16sp" android:textColor="#000000"/>
        </LinearLayout>
        <ImageButton
                android:layout_width="40dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_baseline_edit_24"
                android:id="@+id/btnEdit"
                android:layout_weight="1"
                android:contentDescription="@string/Edit"/>
        <ImageButton
                android:layout_width="40dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/delete"
                android:id="@+id/btnDelete"
                android:layout_weight="1"
                android:contentDescription="@string/delete"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>